tinyml/tests/snapshots/corpus_tests__c0002_match__parse.snap
---
source: tinyml/tests/corpus_tests.rs
expression: "parse_snapshot(\"tests/fixtures/0002_match.ml\")"
---
Module {
    items: [
        TypeDecl(
            TypeDecl {
                name: Name {
                    name: "option",
                    span: Span {
                        start: 5,
                        end: 11,
                    },
                },
                params: [
                    TypeVar {
                        name: "a",
                        span: Span {
                            start: 12,
                            end: 14,
                        },
                    },
                ],
                body: Variant {
                    variants: [
                        TupleConstructor {
                            ident: Name {
                                name: "None",
                                span: Span {
                                    start: 22,
                                    end: 26,
                                },
                            },
                            args: [],
                            span: Span {
                                start: 22,
                                end: 26,
                            },
                        },
                        TupleConstructor {
                            ident: Name {
                                name: "Some",
                                span: Span {
                                    start: 31,
                                    end: 35,
                                },
                            },
                            args: [
                                Var {
                                    var: TypeVar {
                                        name: "a",
                                        span: Span {
                                            start: 36,
                                            end: 38,
                                        },
                                    },
                                    span: Span {
                                        start: 36,
                                        end: 38,
                                    },
                                },
                            ],
                            span: Span {
                                start: 31,
                                end: 39,
                            },
                        },
                    ],
                    span: Span {
                        start: 22,
                        end: 39,
                    },
                },
                span: Span {
                    start: 0,
                    end: 39,
                },
            },
        ),
        LetDecl(
            Const {
                name: Name {
                    name: "get_or_zero",
                    span: Span {
                        start: 45,
                        end: 56,
                    },
                },
                body: Fn {
                    params: [
                        Var {
                            name: Name {
                                name: "x",
                                span: Span {
                                    start: 62,
                                    end: 63,
                                },
                            },
                            span: Span {
                                start: 62,
                                end: 63,
                            },
                        },
                    ],
                    body: Match {
                        scrutinee: Var {
                            name: Name {
                                name: "x",
                                span: Span {
                                    start: 73,
                                    end: 74,
                                },
                            },
                            span: Span {
                                start: 73,
                                end: 74,
                            },
                        },
                        arms: [
                            MatchArm {
                                pattern: Constructor {
                                    name: Name {
                                        name: "None",
                                        span: Span {
                                            start: 81,
                                            end: 85,
                                        },
                                    },
                                    args: [],
                                    span: Span {
                                        start: 81,
                                        end: 85,
                                    },
                                },
                                body: Literal {
                                    value: Int(
                                        "0",
                                    ),
                                    span: Span {
                                        start: 89,
                                        end: 90,
                                    },
                                },
                                span: Span {
                                    start: 81,
                                    end: 90,
                                },
                            },
                            MatchArm {
                                pattern: Constructor {
                                    name: Name {
                                        name: "Some",
                                        span: Span {
                                            start: 95,
                                            end: 99,
                                        },
                                    },
                                    args: [
                                        Var {
                                            name: Name {
                                                name: "value",
                                                span: Span {
                                                    start: 100,
                                                    end: 105,
                                                },
                                            },
                                            span: Span {
                                                start: 100,
                                                end: 105,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 95,
                                        end: 106,
                                    },
                                },
                                body: Var {
                                    name: Name {
                                        name: "value",
                                        span: Span {
                                            start: 110,
                                            end: 115,
                                        },
                                    },
                                    span: Span {
                                        start: 110,
                                        end: 115,
                                    },
                                },
                                span: Span {
                                    start: 95,
                                    end: 115,
                                },
                            },
                        ],
                        span: Span {
                            start: 67,
                            end: 117,
                        },
                    },
                    span: Span {
                        start: 59,
                        end: 117,
                    },
                },
                span: Span {
                    start: 41,
                    end: 117,
                },
            },
        ),
    ],
}
